syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Src.Protos";

package discount;

service UpdateDiscountProtocolBufferService {
	rpc UpdateDiscount(UpdateDiscountRequest) returns (UpdateDiscountProtocolBufferEntity);
}

message UpdateDiscountProtocolBufferEntity {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message UpdateDiscountRequest {
	UpdateDiscountProtocolBufferEntity discount = 1;
}
